<?xml version="1.0"?>
<package>
  <name>mypkg</name>
  <version>1.0.0</version>
  <description>mypkg</description>
  <maintainer email="youta573265-net@yahoo.co.jp"> youta</maintainer>
  <license>GNU General Public License</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export>

  </export>
</package>
